Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.61.00

              Pamtojpeg2k: default to no compression ratio constraint and
              allow compression ratios less than 1.  Because of compression
              metadata, small images do require loss of quality in order to
              get down to a compression ratio of 1.

              Sunicontopnm: Fix incorrect output for depth 8.  Always broken
              (depth = 8 capability was added in Netpbm 10.53 (December 2010).

              pamgauss: Fix bug: erroneously says -maxval is too big on 64 bit
              system.  Always broken (Pamgauss was added in 10.23 (July 2004).

12.09.30 BJH  Release 10.60.00

              xpmtoppm: major speedup for 3-character-per pixel files,
              memory reduction for all files: use hash table instead of
              linear search or direct index, go row by row.

              xpmtoppm: fix bogus "color number too large" failure.  Broken
              in 10.49 (December 2009).

              pnm_hashtuple: slight performance improvement from new hash
              function.  Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              ppmtospu: wild memory accesses.  Always broken (program added in
              10.58 (March 2012).

              pamtosrf: fix storage corruption.  Always broken (program added
              in 10.55 (June 2011).

              Build: change _XOPEN_SOURCE 500 to 600 because on a Mac OSX 10.8
              system, this is necessary to get 'strdup' into <strings.h>.

              Build: rename getline() in xpmtoppm.c to avoid collision
              with some libc.  Always broken.

              Build: Don't expect GCC facilities to exist when compiler is
              Clang.  (Note that Clang identifies itself as GCC).

12.06.28 BJH  Release 10.59.00

              pamtogif: Make data blocks 255 bytes instead of 254.  255 is
              the maximum allowed by GIF.  254 was intended to not trigger