@@ -11,6 +11,9 @@ not yet  BJH  Release 10.61.00
               metadata, small images do require loss of quality in order to
               get down to a compression ratio of 1.
 
+              Xbmtopbm: fix incorrect output, memory leak.  Thanks Prophet of
+              the Way <afu@wta.att.ne.jp>.
+
               Sunicontopnm: Fix incorrect output for depth 8.  Always broken
               (depth = 8 capability was added in Netpbm 10.53 (December 2010).
 
